# rust-translate

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  live_translate.rs
src/: lib.rs
tests/: translate_tests.rs
