[package]
name = "rust-translate"
version = "0.1.0"
edition = "2021"
description = "A simple Rust crate for text translation between languages."
repository = "https://github.com/Mintype/rust-translate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"